--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 <div class="testimonials-single">
                     
                     <blockquote class="blockquote">The Best System for Waste Management System<br>Its So fast and Easy to use</blockquote>
-                    <h5 class="mt-4 mb-2">Aby Walls</h5>
+                    <h5 class="mt-4 mb-2">Ajin J</h5>
                     <p class="text-primary">India</p>
                 </div>
                 
